# radar-signal-visualizer

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.sh  package-lock.json  package.json  test_radar  test_radar.cpp  tsconfig.json
.qoder/repowiki/zh/content/: 快速开始.md  故障排除.md  调试器集成.md  配置与定制.md  项目概述.md
.qoder/repowiki/zh/content/API 参考/: API 参考.md  VSCode 命令 API.md  Webview 消息协议.md  调试器接口.md
.qoder/repowiki/zh/content/Webview 前端实现/: Chart.js 图表集成.md  UI 组件与样式设计.md  Webview 前端实现.md  性能优化与数据处理.md  消息通信协议.md
.qoder/repowiki/zh/content/技术架构/: 技术架构.md  数据流设计.md  整体设计.md  组件交互.md  设计模式实现.md
.qoder/repowiki/zh/content/核心功能实现/: 可视化面板管理.md  扩展入口点.md  数据提供者模块.md  核心功能实现.md  类型定义系统.md
.qoder/repowiki/zh/content/测试与开发/: 开发环境搭建.md  构建配置.md  测试与开发.md  测试信号生成程序.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
assets/: webview.css  webview.js
src/: dataProvider.ts  extension.ts  types.ts  visualizerPanel.ts
test-workspace/: CMakeLists.txt  build.sh  test_radar.cpp  test_radar.cu
